syntax = "proto3";

// Package name
package greet.v1;

// The request message containing the user's name.
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  string message = 1;
}

// The greeting service definition.
service GreetService {
  // Sends a greeting
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

// Incoming request from client
// message GetAddressRequest {
//   string zip_code = 1;
// }
//
// // Response to be returned by API service
// message GetAddressResponse {
//   string zip_code = 1;
//   string street = 2;
//   string neighborhood = 3;
//   string city = 4;
// }
//
// service GetAddressService {
//   // Method definition
//   rpc GetAddress(GetAddressRequest) returns (GetAddressResponse) {}
// }
